# ChurchSong

./: .gitattributes  .gitignore  CHANGELOG.md  ChurchSong.bat  ChurchSong.ini.example  ChurchSong.py  ChurchSong.toml.example  LICENSE  README.md  config.toml.example  pyproject.toml  pyrightconfig.json  requirements.txt
.github/actions/setup/: action.yml
.github/workflows/: code-quality.yml  pypi-publish.yml
.zed/: settings.json
churchtools/: __init__.py  churchtools.py
configuration/: __init__.py  configuration.py
dev-scripts/: babel  translate.py
powerpoint/: __init__.py  powerpoint.py
resources/: ChurchSong.bat  config.toml.example  install.ps1
songbeamer/: __init__.py  songbeamer.py
src/churchsong/: __init__.py  __main__.py  churchtools.py  configuration.py  interactivescreen.py  powerpoint.py  songbeamer.py  utils.py
src/churchsong/churchtools/: __init__.py  events.py  song_statistics.py  song_verification.py
src/churchsong/locales/: de.po  messages.pot
src/churchsong/powerpoint/: __init__.py  appointments.py  services.py
src/churchsong/songbeamer/: __init__.py  windows.py
src/churchsong/utils/: __init__.py  date.py  progress.py  rust.py
typings/: __builtins__.pyi
typings/xlsxwriter/: __init__.py  __init__.pyi  format.py  workbook.py  worksheet.py
